--- a/Index.html
+++ b/Index.html
@@ -56,7 +56,7 @@
 			</p>
 
 		<h2> <b> Html: Your Decisions</h2>
-			<a id="taco" href="alecblackwell1.github.io/Art%2075%20Stuff/Project3/Your%20Decisions.html"> Your Decisions (Click Me)</a>
+			<a id="taco" href="https://alecblackwell1.github.io/Art%2075%20Stuff/Project3/Your%20Decisions.html"> Your Decisions (Click Me)</a>
 			<p>
 			"Your decisions" was inspired by how I felt when I started to realize that I had depression and that I should learn how to deal with it. This was my second attempt at creating an HTML website, its style came from my previous project "A Knights Life".
 			</p>
