--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.md">Home</a></li>
 				<li class="current"><a href="About.html">Artist Statement</a></li>
 			</ul>
 		</nav>
