--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 		<nav>
 			<ul>
-				<li class="current">	<a href="index.md">Home</a>	</li>
+				<li class="current">	<a href="index.html">Home</a>	</li>
 				<li>	<a href="About.html">Artist Statement</a>	</li>
 			</ul>
 		</nav>
