--- a/index.html
+++ b/index.html
@@ -1,82 +1,100 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<meta charset="utf-8">
-			<meta name="viewport" content="width=device-width">
-			<title>Henry's Web Design Welcome</title>
-			<link rel="stylesheet" type="text/css" href="css/WebStyle.css">
+<html>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Henry's Web Design Welcome</title>
+	<link rel="stylesheet" type="text/css" href="css/WebStyle.css">
 </head>
+
 <body>
-<header>
-	<div class="container">
-		<div id="branding">
-			<h1>Henry's Art Portfolio</h1>
+	<header>
+		<div class="container">
+			<div id="branding">
+				<h1>Henry's Art Portfolio</h1>
+			</div>
+			<nav>
+				<ul>
+					<li class="current"> <a href="index.html">Home</a> </li>
+					<li> <a href="About.html">Artist Statement</a> </li>
+				</ul>
+			</nav>
 		</div>
-		<nav>
-			<ul>
-				<li class="current">	<a href="index.html">Home</a>	</li>
-				<li>	<a href="About.html">Artist Statement</a>	</li>
-			</ul>
-		</nav>
-	</div>
-</header>
-		<section id="showcase">
-				<div class="container">
-					<h1>My art</h1>
-					<p>All art presented here is created by Henry Blackwell while taking Art classes at San Jose State University.</p>
-	</div>
-		</section>
+	</header>
+	<section id="showcase">
+		<div class="container">
+			<h1>My art</h1>
+			<p>Welcome to my art portfolio. </p>
+		</div>
+	</section>
 
-		<section id="newsletter">
-				<div class="container">
-		<h2>Glitch Art</h2>
-		<img src="Glitch Art Projectpsd.png" alt="Glitch Art" height="700px" width="876px">
+	<section id="artPieces">
+		<div class="container">
+			<h2>Glitch Art</h2>
+			<img src="Glitch Art Projectpsd.png" alt="Glitch Art" width="1000px" , height="700px">
 			<p>
-				This was my first attempt at Glitch Art during my time in Art 74. I combined elements from a game I enjoyed, League of Legends
+				This was my first attempt at Glitch Art during my time in Art 74. I combined elements from a game I
+				enjoyed, League of Legends
 			</p>
 
-		<h2>3D Mashup
-		<div class="sketchfab-embed-wrapper"><iframe width="640px" height="480px" src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-			<p>
-				<a href="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="color: #1CAAD9;">3D Modeling</a>
-				by Henry Blackwell
-				on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="color: #1CAAD9;">Sketchfab</a>
-			</p>
+			<h2> 3D Mashup </h2>
+				<div class="sketchfab-embed-wrapper"><iframe width="1000px" height="700px"
+						src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed" frameborder="0"
+						allow="autoplay; fullscreen; vr" mozallowfullscreen="true"
+						webkitallowfullscreen="true"></iframe>
+				<p>
+						<a href="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3?utm_medium=embed&utm_source=website&utm_campaign=share-popup"
+							target="_blank" style="color: #1CAAD9;">3D Modeling</a>
+						by Henry Blackwell
+				</p>
 
-		<h2>Our Phoney Affections</h3>
-			<iframe width="876" height="493" src="https://www.youtube.com/embed/VkVWqX0zaqo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			<p>
-				This piece was created while I was in Art 75. 
-			</p>
+			<h2> Our Phoney Affections </h2>
+				<iframe width="1000" height="700" src="https://www.youtube.com/embed/VkVWqX0zaqo" frameborder="0"
+						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+				<p>
+						This piece was created while I was in Art 75.
+				</p>
 
-		<h2> <b> Html: A Knights Life</h2>
-			<a id="taco" href="https://alecblackwell1.github.io/Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">A Knights Life (Click Me)</a>
-			<p>
-			"A Knights Life" was my first attempt at creating a website using HTML and CSS. Its inspiration was the choose your own adventure games that are not commonly seen in today's age.
-			</p>
+			<h2> <b> Html: A Knights Life</h2>
+				<a id="taco"
+						href="https://alecblackwell1.github.io/Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">A
+						Knights Life (Click Me)</a>
+				<p>
+						"A Knights Life" was my first attempt at creating a website using HTML and CSS. Its inspiration
+						was the choose your own adventure games that are not commonly seen in today's age.
+				</p>
 
-		<h2> <b> Html: Your Decisions</h2>
-			<a id="taco" href="https://alecblackwell1.github.io/Art%2075%20Stuff/Project3/Your%20Decisions.html"> Your Decisions (Click Me)</a>
-			<p>
-			"Your decisions" was inspired by how I felt when I started to realize that I had depression and that I should learn how to deal with it. This was my second attempt at creating an HTML website, its style came from my previous project "A Knights Life".
-			</p>
-		</h2>
-					
-		<h2> <b> Html: What we want to do</h2>
-			<a id="taco" href="https://alecblackwell1.github.io/Art%2075%20Stuff/Final%20Project/Our%20Society.html"> What we want to do (Click Me)</a>
-			<p>
-			"What we want to do" was created with the intent to show how people struggle with trying to find jobs in this society and how their own self doubt could make their situation worse.
-			</p>
+			<h2> <b> Html: Your Decisions</h2>
+				<a id="taco"
+						href="https://alecblackwell1.github.io/Art%2075%20Stuff/Project3/Your%20Decisions.html"> Your
+						Decisions (Click Me)</a>
+				<p>
+						"Your decisions" was inspired by how I felt when I started to realize that I had depression and how hopeless everything seemed to me. This was my second attempt at creating an HTML website,
+						its style came from my previous project "A Knights Life".
+				</p>
+			</h2>
 
-		<h2> <b> Sun Drug [Epilepsy Warning]</h2>
-			<a id="taco" href="https://alecblackwell1.github.io/SunThing.html">Sun Drug</a>
-			<p>
-				"Sun Drug" was a concept that I had during my first semester in college. When I first learned about P5, I had recently learned about the effects of drugs on ones brain in my Health class so I got the inspiration for Sun Drug from that.
-			</p>
+			<h2> <b> Html: What we want to do</h2>
+				<a id="taco" href="https://alecblackwell1.github.io/Art%2075%20Stuff/Final%20Project/Our%20Society.html">
+					What we want to do (Click Me)</a>
+				<p>
+					"What we want to do" was created with the intent to show how people struggle with trying to find jobs in
+					this society and how their own self doubt could make their situation worse.
+				</p>
 
-</div>
+			<h2> <b> Sun Drug [Epilepsy Warning]</h2>
+				<a id="taco" href="https://alecblackwell1.github.io/SunThing.html">Sun Drug</a>
+				<p>
+					"Sun Drug" was a concept that I had during my first semester in college. When I first learned about P5,
+					I had recently learned about the effects of drugs on ones brain in my Health class so I got the
+					inspiration for Sun Drug from that.
+				</p>
 
-		</section>
+		</div>
+
+	</section>
 </body>
-</html>
 
+</html>
