--- a/index.html
+++ b/index.html
@@ -30,68 +30,99 @@
 	</section>
 
 	<section id="artPieces">
-		<div class="container">
+
+		<div class="GlitchArtProject">
 			<h2>Glitch Art</h2>
-			<img src="Glitch Art Projectpsd.png" alt="Glitch Art" width="1000px" , height="700px">
+			<a target="_blank" href="Assets/Glitch Art Projectpsd.png">
+				<img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="1000px" , height="700px">
+			</a>
+		</div>
+		<div class ="Description"></div>
 			<p>
 				This was my first attempt at Glitch Art during my time in Art 74. I combined elements from a game I
 				enjoyed, League of Legends
 			</p>
+		</div>
 
-			<h2> 3D Mashup </h2>
-				<div class="sketchfab-embed-wrapper"><iframe width="1000px" height="700px"
-						src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed" frameborder="0"
-						allow="autoplay; fullscreen; vr" mozallowfullscreen="true"
-						webkitallowfullscreen="true"></iframe>
+
+		<div class ="3DMashupProject"><iframe width="1000px" height="700px"
+				src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed" frameborder="0"
+				allow="autoplay; fullscreen; vr" mozallowfullscreen="true"
+				webkitallowfullscreen="true"></iframe>
+		</div>
+		<div class="Description">
 				<p>
 						<a href="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3?utm_medium=embed&utm_source=website&utm_campaign=share-popup"
 							target="_blank" style="color: #1CAAD9;">3D Modeling</a>
 						by Henry Blackwell
 				</p>
+		</div>
 
+
+
+		<div class="OurPhoneyAffections">
 			<h2> Our Phoney Affections </h2>
 				<iframe width="1000" height="700" src="https://www.youtube.com/embed/VkVWqX0zaqo" frameborder="0"
 						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 						allowfullscreen></iframe>
+		</div>
+		<div class ="Description">
 				<p>
 						This piece was created while I was in Art 75.
 				</p>
-
-			<h2> <b> Html: A Knights Life</h2>
+		</div>
+		
+		<div class = "Knight'sLife">
+		<h2> <b> Html: A Knights Life</h2>
 				<a id="taco"
 						href="https://alecblackwell1.github.io/Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">A
 						Knights Life (Click Me)</a>
+		</div>
+		<div class="Description">
 				<p>
 						"A Knights Life" was my first attempt at creating a website using HTML and CSS. Its inspiration
 						was the choose your own adventure games that are not commonly seen in today's age.
 				</p>
+		</div>
 
+		
+		<div class = "YourDecisions">
 			<h2> <b> Html: Your Decisions</h2>
 				<a id="taco"
-						href="https://alecblackwell1.github.io/Art%2075%20Stuff/Project3/Your%20Decisions.html"> Your
+						href="https://alecblackwell1.github.io/Art%2075%20Stuff/YourDecisions/Your%20Decisions.html"> Your
 						Decisions (Click Me)</a>
+		</div>
+		<div class="Description">
 				<p>
 						"Your decisions" was inspired by how I felt when I started to realize that I had depression and how hopeless everything seemed to me. This was my second attempt at creating an HTML website,
 						its style came from my previous project "A Knights Life".
 				</p>
 			</h2>
+		</div>
 
+		<div class = "WhatDo">
 			<h2> <b> Html: What we want to do</h2>
 				<a id="taco" href="https://alecblackwell1.github.io/Art%2075%20Stuff/Final%20Project/Our%20Society.html">
 					What we want to do (Click Me)</a>
+		</div>	
+		<div class ="Description">
 				<p>
 					"What we want to do" was created with the intent to show how people struggle with trying to find jobs in
 					this society and how their own self doubt could make their situation worse.
 				</p>
+		</div>
 
+		<div class="SunDrug">
 			<h2> <b> Sun Drug [Epilepsy Warning]</h2>
 				<a id="taco" href="https://alecblackwell1.github.io/SunThing.html">Sun Drug</a>
+		</div>	
+		<div class="Description">
 				<p>
 					"Sun Drug" was a concept that I had during my first semester in college. When I first learned about P5,
 					I had recently learned about the effects of drugs on ones brain in my Health class so I got the
 					inspiration for Sun Drug from that.
 				</p>
-
+		</div>
 		</div>
 
 	</section>
