--- a/Art 75 Stuff/OurSociety/Our Society.html
+++ b/Art 75 Stuff/OurSociety/Our Society.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+	
 	<link rel="stylesheet" type="text/css" href="Our Society.css">
+	
 	<title> What we want to do </title>
 </head>
 
-<body style="background-color:#333333;">
+<body class="header" style="background-color:#333333;">
+	<header>
+		<div class="container">
+			<div id="branding">
+				<h1>What we want to do</h1>
+			</div>
+			<nav>
+				<ul>
+					<li class="current"> <a href="https://alecblackwell1.github.io/DMAPortfolio/index.html">Home</a> </li>
+					<li> <a href="https://alecblackwell1.github.io/DMAPortfolio/About.html">Artist Statement</a> </li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+</body>
 
+<body>
 <p>
 	When we are born, we are expected to do or create amazing things in our lives. As children, some people want to be astronauts, scientists, actors or even pro sports players. Some of us may become those, but most of the time that is not the case. In our society, we are expected to know wha we want to do by the time we graduate highschool. However, there are plenty who don't know what they want to do. The hardest part about growing up is finding out what we want to do in life. This is a journey to help you on the journey.
 </p>
@@ -22,6 +39,6 @@
 		<br>
 			<a href="Idk.html"> <span class="FuckIDK"> I don't like to do any of these </span> </a>
 </div>
-
 </body>
+
 </html>
