--- a/Art 75 Stuff/OurSociety/Skill.html
+++ b/Art 75 Stuff/OurSociety/Skill.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="Skill.css">
+	<link rel="stylesheet" type="text/css" href="Analyst.css">
 	<title></title>
 </head>
 <body style="background-color:#333333;">
