--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 		<div class="YourDecisions">
 			<h2> <b> Html: Your Decisions</h2>
-			<a id="taco" href="DMAPortfolio/Art%2075%20Stuff/YourDecisions/Your%20Decisions.html">
+			<a id="taco" href="Art 75 Stuff/YourDecisions/Your Decisions.html">
 				Your
 				Decisions (Click Me)</a>
 		</div>
