--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 		<div class="YourDecisions">
 			<h2> <b> Html: Your Decisions</h2>
-			<a id="taco" href="Art 75 Stuff/YourDecisions/Your Decisions.html">
+			<a id="taco" href="https://alecblackwell1.github.io/Art%2075%20Stuff/YourDecisions/Your%20Decisions.html">
 				Your
 				Decisions (Click Me)</a>
 		</div>
@@ -102,7 +102,7 @@
 
 		<div class="WhatDo">
 			<h2> <b> Html: What we want to do</h2>
-			<a id="taco" href="https://alecblackwell1.github.io/Art%2075%20Stuff/Final%20Project/Our%20Society.html">
+			<a id="taco" href="Art%2075%20Stuff/Our%20Society/Our%20Society.html">
 				What we want to do (Click Me)</a>
 		</div>
 		<div class="Description">
