--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 		<div class="WhatDo">
 			<h2> <b> Html: What we want to do</h2>
-			<a id="taco" href="Art%2075%20Stuff/Our%20Society/Our%20Society.html">
+			<a id="taco" href="Art%2075%20Stuff/OurSociety/Our%20Society.html">
 				What we want to do (Click Me)</a>
 		</div>
 		<div class="Description">
