--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="Knight'sLife">
 			<h2> <b> Html: A Knights Life</h2>
 			<a id="taco"
-				href="https://alecblackwell1.github.io/Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">A
+				href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">A
 				Knights Life (Click Me)</a>
 		</div>
 		<div class="Description">
@@ -87,7 +87,7 @@
 
 		<div class="YourDecisions">
 			<h2> <b> Html: Your Decisions</h2>
-			<a id="taco" href="https://alecblackwell1.github.io/Art%2075%20Stuff/YourDecisions/Your%20Decisions.html">
+			<a id="taco" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html">
 				Your
 				Decisions (Click Me)</a>
 		</div>
@@ -115,7 +115,7 @@
 
 		<div class="SunDrug">
 			<h2> <b> Sun Drug [Epilepsy Warning]</h2>
-			<a id="taco" href="https://alecblackwell1.github.io/SunThing.html">Sun Drug</a>
+			<a id="taco" href="SunThing.html">Sun Drug</a>
 		</div>
 		<div class="Description">
 			<p>
