--- a/Art 75 Stuff/OurSociety/Doubt.html
+++ b/Art 75 Stuff/OurSociety/Doubt.html
@@ -4,6 +4,23 @@
 	<link rel="stylesheet" type="text/css" href="Doubt.css">
 	<title>You can do it</title>
 </head>
+
+<body class="header" style="background-color:#333333;">
+	<header>
+		<div class="container">
+			<div id="branding">
+				<h1>What we want to do</h1>
+			</div>
+			<nav>
+				<ul>
+					<li class="current"> <a href="https://alecblackwell1.github.io/DMAPortfolio/index.html">Home</a> </li>
+					<li> <a href="https://alecblackwell1.github.io/DMAPortfolio/About.html">Artist Statement</a> </li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+</body>
+
 <body style="background-color:#333333;">
 
 <p>
