--- a/Art 75 Stuff/YourDecisions/Help.html
+++ b/Art 75 Stuff/YourDecisions/Help.html
@@ -5,6 +5,22 @@
 	<title>Talk to people and find help</title>
 </head>
 
+<body class="header" style="background-color:#333333;">
+	<header>
+		<div class="container">
+			<div id="branding">
+				<h1>Your Decisions</h1>
+			</div>
+			<nav>
+				<ul>
+					<li class="current"> <a href="https://alecblackwell1.github.io/DMAPortfolio/index.html">Home</a> </li>
+					<li> <a href="https://alecblackwell1.github.io/DMAPortfolio/About.html">Artist Statement</a> </li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+</body>
+
 <body style="background-color:#333333;">
 
 <P>You dare try to escape from me?! I AM YOU, I am forever a part of you. You may try to take me away but there will always be part of me within you. You pathetic, worthless, trash, HOW DARE YOU TRY TO TAKE ME AWAY.</P>
