--- a/Art 75 Stuff/YourDecisions/No Help.html
+++ b/Art 75 Stuff/YourDecisions/No Help.html
@@ -5,6 +5,22 @@
 	<title>Live with your problems</title>
 </head>
 
+<body class="header" style="background-color:#333333;">
+	<header>
+		<div class="container">
+			<div id="branding">
+				<h1>Your Decisions</h1>
+			</div>
+			<nav>
+				<ul>
+					<li class="current"> <a href="https://alecblackwell1.github.io/DMAPortfolio/index.html">Home</a> </li>
+					<li> <a href="https://alecblackwell1.github.io/DMAPortfolio/About.html">Artist Statement</a> </li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+</body>
+
 <body style="background-color:#333333;">
 	
 	<p>You are a pathetic piece of sh*t, and you can't do anything about it. You will never get rid of me.</p>
