--- a/Art 75 Stuff/YourDecisions/Your Decisions.html
+++ b/Art 75 Stuff/YourDecisions/Your Decisions.html
@@ -5,10 +5,26 @@
 	<title>Your decisions</title>
 </head>
 
+<body class="header" style="background-color:#333333;">
+	<header>
+		<div class="container">
+			<div id="branding">
+				<h1>Your Decisions</h1>
+			</div>
+			<nav>
+				<ul>
+					<li class="current"> <a href="https://alecblackwell1.github.io/DMAPortfolio/index.html">Home</a> </li>
+					<li> <a href="https://alecblackwell1.github.io/DMAPortfolio/About.html">Artist Statement</a> </li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+</body>
+
 <body style="background-color:#333333;">
 
 <p>
-	You are born in the year 2000, you are born into a middle-middle class family. You live a normal life, have friends, and do activities.
+	You are born in the year 2000, you are born into a middle-middle class family. You live a normal life, have friends, go to school, and do sports.
 	<br>
 	You reach high school, and things seem to change. You lose friends, you don't feel motivated to do anything, and it becomes more and more difficult to find things you like. Over time, you start to feel more and more saddened and you feel like you are worthless and are a waste of time. Your consciousness seems to talk to you more, but it only seems toxic to you. 
 </p>
