--- a/Art 75 Stuff/YourDecisions/Listen to the Voice.html
+++ b/Art 75 Stuff/YourDecisions/Listen to the Voice.html
@@ -5,6 +5,22 @@
 	<title>Listen to the Voice</title>
 </head>
 
+<body class="header" style="background-color:#333333;">
+	<header>
+		<div class="container">
+			<div id="branding">
+				<h1>Your Decisions</h1>
+			</div>
+			<nav>
+				<ul>
+					<li class="current"> <a href="https://alecblackwell1.github.io/DMAPortfolio/index.html">Home</a> </li>
+					<li> <a href="https://alecblackwell1.github.io/DMAPortfolio/About.html">Artist Statement</a> </li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+</body>
+
 <body style="background-color:#333333;">
 
 <p>
