--- a/Art 75 Stuff/Knight'sLife/AbandonedDuty.html
+++ b/Art 75 Stuff/Knight'sLife/AbandonedDuty.html
@@ -4,6 +4,23 @@
 	<link rel="stylesheet" type="text/css" href="Style2.css">
 	<title>YOU HAVE ABANDONED YOUR DUTY</title>
 </head>
+
+<body class="header" style="background-color:#333333;">
+	<header>
+		<div class="container">
+			<div id="branding">
+				<h1>A Knight's Duty</h1>
+			</div>
+			<nav>
+				<ul>
+					<li class="current"> <a href="https://alecblackwell1.github.io/DMAPortfolio/index.html">Home</a> </li>
+					<li> <a href="https://alecblackwell1.github.io/DMAPortfolio/About.html">Artist Statement</a> </li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+</body>
+
 <body style="background-color:#333333;">
 
 <p>The king makes a deal with the bandits and escapes safely. You are deemed a coward by the nation with a bounty on your head.</p>
