--- a/Art 75 Stuff/Knight'sLife/Interactive Website.html
+++ b/Art 75 Stuff/Knight'sLife/Interactive Website.html
@@ -4,7 +4,23 @@
 	<link rel="stylesheet" type="text/css" href="Style1.css">
 	<title>A Knights Life</title>
 </head>
-<header>A Knights Life</header>
+
+<body class="header" style="background-color:#333333;">
+	<header>
+		<div class="container">
+			<div id="branding">
+				<h1>A Knight's Duty</h1>
+			</div>
+			<nav>
+				<ul>
+					<li class="current"> <a href="https://alecblackwell1.github.io/DMAPortfolio/index.html">Home</a> </li>
+					<li> <a href="https://alecblackwell1.github.io/DMAPortfolio/About.html">Artist Statement</a> </li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+</body>
+
 <body style="background-color:#333333;">
 
 <p>You are a knight whose duty is to protect and escort the King's Carriage with your life. As you are passing through a forest, bandits attack your caravan and you are the only knight remaining. There are so many bandits you cannot seem to count. What do you do?</p>
