making it clean

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 
 		<div class="Knight'sLife">
 			<h2> <b> Html: A Knights Life</h2>
-			<a id="taco"
-				href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">A
+			<a id="taco" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">A
 				Knights Life (Click Me)</a>
 		</div>
 		<div class="Description">
