--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
 	<section id="artPieces">
 
+<!-- Glitch Art Project -->
+
 		<div class="GlitchArtProject">
 			<h2>Glitch Art</h2>
 			<a target="_blank" href="Assets/Glitch Art Projectpsd.png">
@@ -43,6 +45,8 @@
 			enjoyed, League of Legends
 		</p>
 		</div>
+
+<!-- 3D Mashup -->
 
 
 		<div class="3DMashupProject"><iframe width="1000px" height="700px"
@@ -57,7 +61,7 @@
 			</p>
 		</div>
 
-
+<!-- Our Phoney Affections -->
 
 		<div class="OurPhoneyAffections">
 			<h2> Our Phoney Affections </h2>
@@ -71,6 +75,8 @@
 			</p>
 		</div>
 
+<!-- Knight's Life -->
+
 		<div class="Knight'sLife">
 			<h2> <b> Html: A Knights Life</h2>
 			<a id="taco" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">A
@@ -83,6 +89,7 @@
 			</p>
 		</div>
 
+<!-- Your Decisions	 -->
 
 		<div class="YourDecisions">
 			<h2> <b> Html: Your Decisions</h2>
@@ -99,6 +106,8 @@
 			</h2>
 		</div>
 
+<!-- What we want to do	 -->
+
 		<div class="WhatDo">
 			<h2> <b> Html: What we want to do</h2>
 			<a id="taco" href="Art%2075%20Stuff/OurSociety/Our%20Society.html">
@@ -111,6 +120,7 @@
 			</p>
 		</div>
 
+<!-- Sun Drug	 -->
 
 		<div class="SunDrug">
 			<h2> <b> Sun Drug [Epilepsy Warning]</h2>
