--- a/index.html
+++ b/index.html
@@ -31,27 +31,29 @@
 
 	<section id="artPieces">
 
-<!-- Glitch Art Project -->
+		<!-- Glitch Art Project -->
 
 		<div class="GlitchArtProject">
 			<h2>Glitch Art</h2>
 			<a target="_blank" href="Assets/Glitch Art Projectpsd.png">
-				<img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="1000px" , height="700px">
+				<img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="300px" , height="300px">
 			</a>
 		</div>
 		<div class="Description"></div>
 		<p>
-			This was my first attempt at Glitch Art during my time in Art 74. I combined elements from a game I
+			This was my first attempt at Glitch Art during my time in Art 74. I was still very new to Photoshop at the time and I had a lot of fun making this project I combined elements from a game I
 			enjoyed, League of Legends
 		</p>
 		</div>
 
-<!-- 3D Mashup -->
+		<!-- 3D Mashup -->
 
-
-		<div class="3DMashupProject"><iframe width="1000px" height="700px"
+		<div class="3DMashupProject">
+			<h2>3D Mashup Project</h2>
+			<iframe width="1000px" height="700px"
 				src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed" frameborder="0"
-				allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+				allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
+			</iframe>
 		</div>
 		<div class="Description">
 			<p>
@@ -61,13 +63,14 @@
 			</p>
 		</div>
 
-<!-- Our Phoney Affections -->
+		<!-- Our Phoney Affections -->
 
 		<div class="OurPhoneyAffections">
 			<h2> Our Phoney Affections </h2>
 			<iframe width="1000" height="700" src="https://www.youtube.com/embed/VkVWqX0zaqo" frameborder="0"
 				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen></iframe>
+				allowfullscreen>
+			</iframe>
 		</div>
 		<div class="Description">
 			<p>
@@ -75,12 +78,12 @@
 			</p>
 		</div>
 
-<!-- Knight's Life -->
+		<!-- Knight's Life -->
 
 		<div class="Knight'sLife">
 			<h2> <b> Html: A Knights Life</h2>
-			<a id="taco" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">A
-				Knights Life (Click Me)</a>
+			<a id="taco" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">
+				A Knights Life (Click Me)</a>
 		</div>
 		<div class="Description">
 			<p>
@@ -89,13 +92,12 @@
 			</p>
 		</div>
 
-<!-- Your Decisions	 -->
+		<!-- Your Decisions	 -->
 
 		<div class="YourDecisions">
 			<h2> <b> Html: Your Decisions</h2>
 			<a id="taco" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html">
-				Your
-				Decisions (Click Me)</a>
+				Your Decisions (Click Me)</a>
 		</div>
 		<div class="Description">
 			<p>
@@ -106,7 +108,7 @@
 			</h2>
 		</div>
 
-<!-- What we want to do	 -->
+		<!-- What we want to do	 -->
 
 		<div class="WhatDo">
 			<h2> <b> Html: What we want to do</h2>
@@ -120,11 +122,12 @@
 			</p>
 		</div>
 
-<!-- Sun Drug	 -->
+		<!-- Sun Drug	 -->
 
 		<div class="SunDrug">
 			<h2> <b> Sun Drug [Epilepsy Warning]</h2>
-			<a id="taco" href="SunThing.html">Sun Drug</a>
+			<a id="taco" href="SunThing.html">
+				Sun Drug</a>
 		</div>
 		<div class="Description">
 			<p>
