--- a/Art 74 Stuff/SunThing.html
+++ b/Art 74 Stuff/SunThing.html
@@ -3,13 +3,31 @@
   <head>
     <meta charset="UTF-8">
     <title>SunThing</title>
+    <link rel="stylesheet" type="text/css" href="css/WebStyle.css">
+  </head>
+
+  <body class="header" style="background-color:#333333;">
+    <header>
+      <div class="container">
+        <div id="branding">
+          <h1>Sun Drug</h1>
+        </div>
+        <nav>
+          <ul>
+            <li class="current"> <a href="https://alecblackwell1.github.io/DMAPortfolio/index.html">Home</a> </li>
+            <li> <a href="https://alecblackwell1.github.io/DMAPortfolio/About.html">Artist Statement</a> </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
+  
     <script src="JS/p5.js" type="text/javascript"></script>
     <script src="JS/p5.dom.js" type="text/javascript"></script>
     <script src="JS/p5.sound.js" type="text/javascript"></script>
     <script src="JS/sketch.js" type="text/javascript"></script>
 
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
-  </head>
   <body>
+
   </body>
 </html>
