--- a/SunThing.html
+++ b/SunThing.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>SunThing</title>
-    <link rel="stylesheet" type="text/css" href="css/WebStyle.css">
+    <link rel="stylesheet" type="text/css" href="Art 74 Stuff/css/WebStyle.css">
   </head>
 
   <body class="header" style="background-color:#333333;">
