--- a/SunThing.html
+++ b/SunThing.html
@@ -22,10 +22,10 @@
     </header>
   </body>
   
-    <script src="JS/p5.js" type="text/javascript"></script>
-    <script src="JS/p5.dom.js" type="text/javascript"></script>
-    <script src="JS/p5.sound.js" type="text/javascript"></script>
-    <script src="JS/sketch.js" type="text/javascript"></script>
+    <script src="Art 74 Stuff/JS/p5.js" type="text/javascript"></script>
+    <script src="Art 74 Stuff/JS/p5.dom.js" type="text/javascript"></script>
+    <script src="Art 74 Stuff/JS/p5.sound.js" type="text/javascript"></script>
+    <script src="Art 74 Stuff/JS/sketch.js" type="text/javascript"></script>
 
   <body>
 
