adding gap webpage

--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
 	</section>
 
 	<section id="artPieces">
-
 		<!-- Glitch Art Project -->
-
-		<div class="GlitchArtProject">
+		<div class="column" id="GlitchArtProject">
 			<h2>Glitch Art</h2>
-			<a target="_blank" href="Assets/Glitch Art Projectpsd.png">
-				<img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="300px" , height="300px">
+			<a target="_blank" href="GlitchArtProject.html">
+				<img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="900px" , height="700px">
 			</a>
 		</div>
 		<div class="Description"></div>
@@ -45,10 +43,9 @@
 			enjoyed, League of Legends
 		</p>
 		</div>
-
 		<!-- 3D Mashup -->
 
-		<div class="3DMashupProject">
+		<div class="column" id="3DMashupProject">
 			<h2>3D Mashup Project</h2>
 			<iframe width="1000px" height="700px"
 				src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed" frameborder="0"
@@ -65,7 +62,7 @@
 
 		<!-- Our Phoney Affections -->
 
-		<div class="OurPhoneyAffections">
+		<div class="column" id="OurPhoneyAffections">
 			<h2> Our Phoney Affections </h2>
 			<iframe width="1000" height="700" src="https://www.youtube.com/embed/VkVWqX0zaqo" frameborder="0"
 				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
