--- a/SunThing.html
+++ b/SunThing.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div id="branding">
-          <h1>Sun Drug</h1>
+          <h1>Sun Drug (EPILEPSY WARNING)</h1>
         </div>
         <nav>
           <ul>
