--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="900px" , height="700px">
 			</a>
 		</div>
-		<div class="Description"></div>
+		<div class="Description">
 		<p>
 			This was my first attempt at Glitch Art during my time in Art 74. I was still very new to Photoshop at the time and I had a lot of fun making this project I combined elements from a game I
 			enjoyed, League of Legends
@@ -50,7 +50,7 @@
 		<!-- 3D Mashup -->
 		<div class="column" id="3DMashupProject">
 			<h2>3D Mashup Project</h2>
-			<iframe width="1000px" height="700px"
+			<iframe width="900px" height="700px"
 				src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed" frameborder="0"
 				allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
 			</iframe>
@@ -66,7 +66,7 @@
 		<!-- Our Phoney Affections -->
 		<div class="column" id="OurPhoneyAffections">
 			<h2> Our Phoney Affections </h2>
-			<iframe width="1000" height="700" src="https://www.youtube.com/embed/VkVWqX0zaqo" frameborder="0"
+			<iframe width="950" height="700" src="https://www.youtube.com/embed/VkVWqX0zaqo" frameborder="0"
 				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				allowfullscreen>
 			</iframe>
@@ -78,7 +78,7 @@
 		</div>
 
 		<!-- Knight's Life -->
-		<div class="Knight'sLife">
+		<div class="column" id="Knight'sLife">
 			<h2> <b> Html: A Knights Life</h2>
 			<a id="taco" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">
 				A Knights Life (Click Me)</a>
@@ -91,7 +91,7 @@
 		</div>
 
 		<!-- Your Decisions	 -->
-		<div class="YourDecisions">
+		<div class="column" id="YourDecisions">
 			<h2> <b> Html: Your Decisions</h2>
 			<a id="taco" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html">
 				Your Decisions (Click Me)</a>
@@ -106,7 +106,7 @@
 		</div>
 
 		<!-- What we want to do	 -->
-		<div class="WhatDo">
+		<div class="column" id="WhatDo">
 			<h2> <b> Html: What we want to do</h2>
 			<a id="taco" href="Art%2075%20Stuff/OurSociety/Our%20Society.html">
 				What we want to do (Click Me)</a>
@@ -119,7 +119,7 @@
 		</div>
 
 		<!-- Sun Drug	 -->
-		<div class="SunDrug">
+		<div class="column" id="SunDrug">
 			<h2> <b> Sun Drug [Epilepsy Warning]</h2>
 			<a id="taco" href="SunThing.html">
 				Sun Drug</a>
