--- a/GlitchArtProject.html
+++ b/GlitchArtProject.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>SunThing</title>
+    <title>Glitch Art</title>
     <link rel="stylesheet" type="text/css" href="css/WebStyle.css">
   </head>
 
