--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<header>
-		
+
 		<div class="container">
 			<div id="branding">
 				<h1>Henry's Art Portfolio</h1>
@@ -25,115 +25,133 @@
 
 	</header>
 	<section id="showcase">
-		<div class="container">
+		<div class="intro">
 			<h1>My art</h1>
-			<p>Welcome to my art portfolio. </p>
+			<p>Welcome to my art portfolio. Please click on any of the titles to be taken to its respective page</p>
 		</div>
 	</section>
 
-	<section id="artPieces">
+	<div class="columns">
 
 		<!-- Glitch Art Project -->
 		<div class="column" id="GlitchArtProject">
-			<h2>Glitch Art</h2>
-			<a target="_blank" href="GlitchArtProject.html">
-				<img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="900px" , height="700px">
-			</a>
-		</div>
-		<div class="Description">
-		<p>
-			This was my first attempt at Glitch Art during my time in Art 74. I was still very new to Photoshop at the time and I had a lot of fun making this project I combined elements from a game I
-			enjoyed, League of Legends
-		</p>
+			<h2><a target="_blank" href="GlitchArtProject.html">Glitch Art</a></h2>
+			
+				<img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="600px" , height="500px">
+			
+			<div class="Description">
+				<p>
+					This was my first attempt at Glitch Art during my time in Art 74. I was still very new to Photoshop
+					at
+					the time and I had a lot of fun making this project.
+				</p>
+			</div>
 		</div>
 
 		<!-- 3D Mashup -->
 		<div class="column" id="3DMashupProject">
-			<h2>3D Mashup Project</h2>
-			<iframe width="900px" height="700px"
-				src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed" frameborder="0"
-				allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
+			<h2><a target="_blank" href="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/">3D Mashup Project</a></h2>
+			<iframe width="600" height="500" src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed"
+				frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
 			</iframe>
-		</div>
-		<div class="Description">
-			<p>
-				<a href="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3?utm_medium=embed&utm_source=website&utm_campaign=share-popup"
-					target="_blank" style="color: #1CAAD9;">3D Modeling</a>
-				by Henry Blackwell
-			</p>
+
+			<div class="Description">
+				<p>
+					This piece was my first attempt at 3D Modeling. My focus for this project was how one can be tortured by their past.
+				</p>
+			</div>
 		</div>
 
 		<!-- Our Phoney Affections -->
 		<div class="column" id="OurPhoneyAffections">
 			<h2> Our Phoney Affections </h2>
-			<iframe width="950" height="700" src="https://www.youtube.com/embed/VkVWqX0zaqo" frameborder="0"
-				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-				allowfullscreen>
+			<iframe width="250px" height="250px" src="https://www.youtube.com/embed/VkVWqX0zaqo" frameborder="0"
+				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 			</iframe>
+
+			<div class="Description">
+				<p>
+					This piece was created while I was in Art 75.
+				</p>
+			</div>
 		</div>
-		<div class="Description">
-			<p>
-				This piece was created while I was in Art 75.
-			</p>
+
+		<!-- The Book Project -->
+		<div class="column" id="TheBook">
+			<h2><a target="_blank" href="TheBook.html">The Book</a></h2>
+			
+				<img src="Assets/Book image-1.jpg" alt="Glitch Art" width="250px" , height="250px">
+			
+			<div class="Description">
+				<p>
+					This was created during my time in Phot 40.
+				</p>
+			</div>
 		</div>
 
 		<!-- Knight's Life -->
 		<div class="column" id="Knight'sLife">
 			<h2> <b> Html: A Knights Life</h2>
-			<a id="taco" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">
+			<a id="webLink" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">
 				A Knights Life (Click Me)</a>
-		</div>
-		<div class="Description">
-			<p>
-				"A Knights Life" was my first attempt at creating a website using HTML and CSS. Its inspiration
-				was the choose your own adventure games that are not commonly seen in today's age.
-			</p>
+
+			<div class="Description">
+				<p>
+					"A Knights Life" was my first attempt at creating a website using HTML and CSS. Its inspiration
+					was the choose your own adventure games that are not commonly seen in today's age.
+				</p>
+			</div>
 		</div>
 
 		<!-- Your Decisions	 -->
 		<div class="column" id="YourDecisions">
 			<h2> <b> Html: Your Decisions</h2>
-			<a id="taco" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html">
+			<a id="webLink" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html">
 				Your Decisions (Click Me)</a>
-		</div>
-		<div class="Description">
-			<p>
-				"Your decisions" was inspired by how I felt when I started to realize that I had depression and how
-				hopeless everything seemed to me. This was my second attempt at creating an HTML website,
-				its style came from my previous project "A Knights Life".
-			</p>
-			</h2>
+
+			<div class="Description">
+				<p>
+					"Your decisions" was inspired by how I felt when I started to realize that I had depression and how
+					hopeless everything seemed to me. This was my second attempt at creating an HTML website,
+					its style came from my previous project "A Knights Life".
+				</p>
+				</h2>
+			</div>
 		</div>
 
 		<!-- What we want to do	 -->
 		<div class="column" id="WhatDo">
 			<h2> <b> Html: What we want to do</h2>
-			<a id="taco" href="Art%2075%20Stuff/OurSociety/Our%20Society.html">
+			<a id="webLink" href="Art%2075%20Stuff/OurSociety/Our%20Society.html">
 				What we want to do (Click Me)</a>
-		</div>
-		<div class="Description">
-			<p>
-				"What we want to do" was created with the intent to show how people struggle with trying to find jobs in
-				this society and how their own self doubt could make their situation worse.
-			</p>
-		</div>
 
+			<div class="Description">
+				<p>
+					"What we want to do" was created with the intent to show how people struggle with trying to find
+					jobs in
+					this society and how their own self doubt could make their situation worse.
+				</p>
+			</div>
+		</div>
+		
 		<!-- Sun Drug	 -->
 		<div class="column" id="SunDrug">
 			<h2> <b> Sun Drug [Epilepsy Warning]</h2>
-			<a id="taco" href="SunThing.html">
+			<a id="webLink" href="SunThing.html">
 				Sun Drug</a>
-		</div>
-		<div class="Description">
-			<p>
-				"Sun Drug" was a concept that I had during my first semester in college. When I first learned about P5,
-				I had recently learned about the effects of drugs on ones brain in my Health class so I got the
-				inspiration for Sun Drug from that.
-			</p>
-		</div>
+
+			<div class="Description">
+				<p>
+					"Sun Drug" was a concept that I had during my first semester in college. When I first learned about
+					P5,
+					I had recently learned about the effects of drugs on ones brain in my Health class so I got the
+					inspiration for Sun Drug from that.
+				</p>
+			</div>
 		</div>
 
-	</section>
+
+	</div>
 </body>
 
 </html>
