--- a/OurPhoneyAffections.html
+++ b/OurPhoneyAffections.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Glitch Art</title>
+    <title>OurPhoneyAffections</title>
     <link rel="stylesheet" type="text/css" href="css/WebStyle.css">
   </head>
 
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div id="branding">
-          <h1>Glitch Art</h1>
+          <h1>Our Phoney Affections</h1>
         </div>
         <nav>
           <ul>
@@ -23,15 +23,16 @@
 
   </body>
 
-<body>
-    <div class = image>
-      <img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="1150px" , height="750px">
+  <body>
+
+    <div class="video">
+      <iframe width="1150" height="750" src="https://www.youtube.com/embed/VkVWqX0zaqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <p class="imageDesc">
       Hello this is the Description
     </p>
-    
-</body>
+
+  </body>
 
 </html>
