--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 
 		<!-- Our Phoney Affections -->
 		<div class="column" id="OurPhoneyAffections">
-			<h2> Our Phoney Affections </h2>
-			<iframe width="250px" height="250px" src="https://www.youtube.com/embed/VkVWqX0zaqo" frameborder="0"
+			<h2><a target="_blank" href="OurPhoneyAffections.html">Our Phoney Affections</a></h2>
+
+			<iframe width="600px" height="500px" src="https://www.youtube.com/embed/VkVWqX0zaqo" frameborder="0"
 				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 			</iframe>
 
@@ -78,10 +79,12 @@
 
 		<!-- The Book Project -->
 		<div class="column" id="TheBook">
-			<h2><a target="_blank" href="TheBook.html">The Book</a></h2>
-			
-				<img src="Assets/Book image-1.jpg" alt="Glitch Art" width="250px" , height="250px">
-			
+			<h2>
+				<a target="_blank" href="TheBook.html">The Book</a>
+			</h2>
+
+			<img src="Assets/Book image-1.jpg" alt="Glitch Art" width="600px" , height="500px">
+
 			<div class="Description">
 				<p>
 					This was created during my time in Phot 40.
