--- a/TheBook.html
+++ b/TheBook.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div id="branding">
-          <h1>Glitch Art</h1>
+          <h1>The Book</h1>
         </div>
         <nav>
           <ul>
@@ -25,79 +25,79 @@
 <body>
 
   <div class = image>
-    <img src="Assets/Book image-1.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-1.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the first image
     </p>
 
-    <img src="Assets/Book image-2.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-2.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the second image
     </p>
 
-    <img src="Assets/Book image-3.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-3.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the third image
     </p>
 
-    <img src="Assets/Book image-4.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-4.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the fourth image
     </p>
 
-    <img src="Assets/Book image-5.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-5.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the fifth image
     </p>
 
-    <img src="Assets/Book image-6.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-6.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the sixth image
     </p>
 
-    <img src="Assets/Book image-7.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-7.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the seventh image
     </p>
 
-    <img src="Assets/Book image-8.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-8.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the eighth image
     </p>
 
-    <img src="Assets/Book image-9.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-9.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
-      This is the first image
+      This is the ninth image
     </p>
 
-    <img src="Assets/Book image-10.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-10.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
-      This is the second image
+      This is the tenth image
     </p>
 
-    <img src="Assets/Book image-11.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-11.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
-      This is the third image
+      This is the eleventh image
     </p>
 
-    <img src="Assets/Book image-12.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-12.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
-      This is the fourth image
+      This is the twelveth image
     </p>
 
-    <img src="Assets/Book image-13.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-13.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
-      This is the fifth image
+      This is the thirteenth image
     </p>
 
-    <img src="Assets/Book image-14.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-14.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
-      This is the fifth image
+      This is the fourteenth image
     </p>
 
-    <img src="Assets/Book image-15.jpg" alt="Glitch Art" width="900px" , height="700px">
+    <img src="Assets/Book image-15.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
-      This is the fifth image
+      This is the fifteenth image
     </p>
   </div>
 
