--- a/TheBook.html
+++ b/TheBook.html
@@ -24,7 +24,7 @@
 
 <body>
 
-  <div class = image>
+  <div class = PHOTimage>
     <img src="Assets/Book image-1.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the first image
