--- a/GlitchArtProject.html
+++ b/GlitchArtProject.html
@@ -20,18 +20,18 @@
         </nav>
       </div>
     </header>
-
   </body>
 
-<body>
-    <div class = image>
-      <img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="1150px" , height="750px">
+  <body>
+
+    <div class = "GAimage">
+      <img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="1200px" , height="800px">
     </div>
 
     <p class="imageDesc">
       Hello this is the Description
     </p>
     
-</body>
+  </body>
 
 </html>
