--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		<!-- 3D Mashup -->
 		<div class="column" id="3DMashupProject">
-			<h2><a target="_blank" href="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/">3D Mashup Project</a></h2>
+			<h2><a target="_blank" href="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/">Mental Anguish</a></h2>
 			<iframe width="600" height="500" src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed"
 				frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
 			</iframe>
@@ -94,7 +94,7 @@
 
 		<!-- Knight's Life -->
 		<div class="column" id="Knight'sLife">
-			<h2> <b> Html: A Knights Life</h2>
+			<h2> <b> Html: A Knights Life </b></h2>
 			<a id="webLink" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">
 				A Knights Life (Click Me)</a>
 
@@ -108,23 +108,21 @@
 
 		<!-- Your Decisions	 -->
 		<div class="column" id="YourDecisions">
-			<h2> <b> Html: Your Decisions</h2>
+			<h2> <b> Html: Your Decisions </b></h2>
 			<a id="webLink" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html">
 				Your Decisions (Click Me)</a>
 
 			<div class="Description">
 				<p>
-					"Your decisions" was inspired by how I felt when I started to realize that I had depression and how
-					hopeless everything seemed to me. This was my second attempt at creating an HTML website,
+					"Your decisions" was inspired by how I felt when I started to realize that I had depression and how hopeless everything seemed to me. This was my second attempt at creating an HTML website,
 					its style came from my previous project "A Knights Life".
 				</p>
-				</h2>
 			</div>
 		</div>
 
 		<!-- What we want to do	 -->
 		<div class="column" id="WhatDo">
-			<h2> <b> Html: What we want to do</h2>
+			<h2> <b> Html: What we want to do </b></h2>
 			<a id="webLink" href="Art%2075%20Stuff/OurSociety/Our%20Society.html">
 				What we want to do (Click Me)</a>
 
@@ -139,7 +137,7 @@
 		
 		<!-- Sun Drug	 -->
 		<div class="column" id="SunDrug">
-			<h2> <b> Sun Drug [Epilepsy Warning]</h2>
+			<h2> <b> Sun Drug [Epilepsy Warning] </b></h2>
 			<a id="webLink" href="SunThing.html">
 				Sun Drug</a>
 
@@ -152,7 +150,6 @@
 				</p>
 			</div>
 		</div>
-
 
 	</div>
 </body>
