--- a/GlitchArtProject.html
+++ b/GlitchArtProject.html
@@ -24,8 +24,8 @@
 
   <body>
 
-    <div class = "GAimage">
-      <img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="1200px" , height="800px">
+    <div class = GAimage>
+      <img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="1500px" , height="1000px">
     </div>
 
     <p class="imageDesc">
