--- a/TheBook.html
+++ b/TheBook.html
@@ -25,61 +25,73 @@
 <body>
 
   <div class = PHOTimage>
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-1.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the first image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-2.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the second image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-3.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the third image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-4.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the fourth image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-5.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the fifth image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-6.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the sixth image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-7.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the seventh image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-8.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the eighth image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-9.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the ninth image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-10.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the tenth image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-11.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the eleventh image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-12.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the twelveth image
@@ -90,11 +102,13 @@
       This is the thirteenth image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-14.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the fourteenth image
     </p>
 
+    <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-15.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
       This is the fifteenth image
