--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
 				<p>
 					"What we want to do" was created with the intent to show how people struggle with trying to find
 					jobs in
-					this society and how their own self doubt could make their situation worse.
+					this society a9+
+					nd how their own self doubt could make their situation worse.
 				</p>
 			</div>
 		</div>
