adding Mental Anguish

--- a/index.html
+++ b/index.html
@@ -94,13 +94,11 @@
 
 		<!-- Knight's Life -->
 		<div class="column" id="Knight'sLife">
-			<h2> <b> Html: A Knights Life </b></h2>
-			<a id="webLink" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html">
-				A Knights Life (Click Me)</a>
-
+			<h2> <b><a id="webLink" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html"> A Knights Duty (Click Me) </a></b></h2>
+			
 			<div class="Description">
 				<p>
-					"A Knights Life" was my first attempt at creating a website using HTML and CSS. Its inspiration
+					"A Knights Duty" was my first attempt at creating a website using HTML and CSS. Its inspiration
 					was the choose your own adventure games that are not commonly seen in today's age.
 				</p>
 			</div>
@@ -108,9 +106,8 @@
 
 		<!-- Your Decisions	 -->
 		<div class="column" id="YourDecisions">
-			<h2> <b> Html: Your Decisions </b></h2>
-			<a id="webLink" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html">
-				Your Decisions (Click Me)</a>
+			<h2> <b><a id="webLink" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html"> Your Decisions (Click Me)</a></b></h2>
+			
 
 			<div class="Description">
 				<p>
@@ -122,9 +119,9 @@
 
 		<!-- What we want to do	 -->
 		<div class="column" id="WhatDo">
-			<h2> <b> Html: What we want to do </b></h2>
-			<a id="webLink" href="Art%2075%20Stuff/OurSociety/Our%20Society.html">
-				What we want to do (Click Me)</a>
+			<h2> <b><a id="webLink" href="Art%2075%20Stuff/OurSociety/Our%20Society.html">
+				What we want to do (Click Me)</a></b></h2>
+			
 
 			<div class="Description">
 				<p>
@@ -138,9 +135,9 @@
 		
 		<!-- Sun Drug	 -->
 		<div class="column" id="SunDrug">
-			<h2> <b> Sun Drug [Epilepsy Warning] </b></h2>
-			<a id="webLink" href="SunThing.html">
-				Sun Drug</a>
+			<h2> <b><a id="webLink" href="SunThing.html">
+				[EPILEPSY WARNING] Sun Drug (Click Me) </a></b></h2>
+			
 
 			<div class="Description">
 				<p>
