--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		<!-- 3D Mashup -->
 		<div class="column" id="3DMashupProject">
-			<h2><a target="_blank" href="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/">Mental Anguish</a></h2>
+			<h2><a target="_blank" href="MentalAnguish.html">Mental Anguish</a></h2>
 			<iframe width="600" height="500" src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed"
 				frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
 			</iframe>
