--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Henry's Web Design Welcome</title>
 	<link rel="stylesheet" type="text/css" href="css/WebStyle.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -36,14 +39,13 @@
 		<!-- Glitch Art Project -->
 		<div class="column" id="GlitchArtProject">
 			<h2><a target="_blank" href="GlitchArtProject.html">Glitch Art</a></h2>
-			
-				<img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="600px" , height="500px">
-			
+
+			<img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="600px" , height="500px">
+
 			<div class="Description">
 				<p>
-					This was my first attempt at Glitch Art during my time in Art 74. I was still very new to Photoshop
-					at
-					the time and I had a lot of fun making this project.
+					This was my first attempt at Glitch Art using Adobe Photoshop. At the time, I was still very new to
+					Photoshop at the time and was still largely experimenting with its features.
 				</p>
 			</div>
 		</div>
@@ -57,7 +59,8 @@
 
 			<div class="Description">
 				<p>
-					This piece was my first attempt at 3D Modeling. My focus for this project was how one can be tortured by their past.
+					This piece was my first attempt at 3D Modeling using Sketchfab. Although My focus for this project
+					was how one can be tortured by their past.
 				</p>
 			</div>
 		</div>
@@ -79,9 +82,7 @@
 
 		<!-- The Book Project -->
 		<div class="column" id="TheBook">
-			<h2>
-				<a target="_blank" href="TheBook.html">The Book</a>
-			</h2>
+			<h2><a target="_blank" href="TheBook.html">The Book</a></h2>
 
 			<img src="Assets/Book image-1.jpg" alt="Glitch Art" width="600px" , height="500px">
 
@@ -94,8 +95,9 @@
 
 		<!-- Knight's Life -->
 		<div class="column" id="Knight'sLife">
-			<h2> <b><a id="webLink" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html"> A Knights Duty (Click Me) </a></b></h2>
-			
+			<h2> <b><a id="webLink" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html"> A Knights Duty
+						(Click Me) </a></b></h2>
+
 			<div class="Description">
 				<p>
 					"A Knights Duty" was my first attempt at creating a website using HTML and CSS. Its inspiration
@@ -106,12 +108,13 @@
 
 		<!-- Your Decisions	 -->
 		<div class="column" id="YourDecisions">
-			<h2> <b><a id="webLink" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html"> Your Decisions (Click Me)</a></b></h2>
-			
+			<h2> <b><a id="webLink" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html"> Your Decisions (Click
+						Me)</a></b></h2>
 
 			<div class="Description">
 				<p>
-					"Your decisions" was inspired by how I felt when I started to realize that I had depression and how hopeless everything seemed to me. This was my second attempt at creating an HTML website,
+					"Your decisions" was inspired by how I felt when I started to realize that I had depression and how
+					hopeless everything seemed to me. This was my second attempt at creating an HTML website,
 					its style came from my previous project "A Knights Life".
 				</p>
 			</div>
@@ -120,8 +123,8 @@
 		<!-- What we want to do	 -->
 		<div class="column" id="WhatDo">
 			<h2> <b><a id="webLink" href="Art%2075%20Stuff/OurSociety/Our%20Society.html">
-				What we want to do (Click Me)</a></b></h2>
-			
+						What we want to do (Click Me)</a></b></h2>
+
 
 			<div class="Description">
 				<p>
@@ -132,12 +135,11 @@
 				</p>
 			</div>
 		</div>
-		
+
 		<!-- Sun Drug	 -->
 		<div class="column" id="SunDrug">
 			<h2> <b><a id="webLink" href="SunThing.html">
 				[EPILEPSY WARNING] Sun Drug (Click Me) </a></b></h2>
-			
 
 			<div class="Description">
 				<p>
