--- a/Art101-Randomizer/index.html
+++ b/Art101-Randomizer/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
-<head>
-  <script src="p5.js"></script>
-  <script src="p5.sound.min.js"></script>
+  <head>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
-  <script src="sketch.js"></script>
+
 </head>
 
 <body>
 
-  <div class="row">
-    <div class="column" id="canvasDiv">
-
-    </div>
-    <div class="column" id="controlsDiv">
-      <div class="" id = "inputFields">
-    
+  <body class="header" style="background-color:#333333;">
+    <header>
+      <div class="container">
+        <div id="branding">
+          <h1>Game Randomizer</h1>
+        </div>
+        <nav>
+          <ul>
+            <li class="current"> <a href="https://alecblackwell1.github.io/DMAPortfolio/index.html">Home</a> </li>
+            <li> <a href="https://alecblackwell1.github.io/DMAPortfolio/About.html">Artist Statement</a> </li>
+          </ul>
+        </nav>
       </div>
+    </header>
+  </body>
+  
+  <body>
+    <script src="p5.js"></script>
+    <script src="sketch.js"></script>
+  </body>
 
-      <button type="button" 
-      id="addMoreButton">Add more</button>
-      <button type="button" 
-      id="randButton" class = "randomizerButton">Click once to randomize</button>
-    </div>
-
+  <div class = "" id = "controlsDiv">
+    <button type="button" id="randButton">Click once to randomize</button>
   </div>
 
-
-
-</body>
-
-</html>
+</body></html>
