--- a/Art101-Randomizer/index.html
+++ b/Art101-Randomizer/index.html
@@ -27,8 +27,8 @@
   </body>
   
   <body>
-    <script src="p5.js"></script>
-    <script src="sketch.js"></script>
+    <script src="p5.js" type="text/javascript"></script>
+    <script src="sketch.js" type="text/javascript"></script>
   </body>
 
   <div class = "" id = "controlsDiv">
