--- a/Art101-Randomizer/index.html
+++ b/Art101-Randomizer/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
-  <head>
+<head>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Game Randomizer</title>
   <meta charset="utf-8">
-
 </head>
 
-<body>
-
-  <body class="header" style="background-color:#333333;">
+<body class="header" style="background-color:#333333;">
     <header>
       <div class="container">
         <div id="branding">
@@ -24,15 +20,20 @@
         </nav>
       </div>
     </header>
-  </body>
-  
-  <body>
-    <script src="p5.js" type="text/javascript"></script>
-    <script src="sketch.js" type="text/javascript"></script>
-  </body>
+</body>
 
-  <div class = "" id = "controlsDiv">
-    <button type="button" id="randButton">Click once to randomize</button>
-  </div>
 
-</body></html>
+  <script src="p5.js" type="text/javascript"></script>
+  <script src="sketch.js" type="text/javascript"></script>
+
+ <p class="imageDesc">
+   Hello this is the Description
+</p>
+
+<div class = "" id = "controlsDiv">
+  <button type="button" id="randButton">Click once to randomize</button>
+</div>
+
+
+
+</html>
