fixing positions for descriptions

--- a/Art101-Randomizer/index.html
+++ b/Art101-Randomizer/index.html
@@ -23,17 +23,17 @@
 </body>
 
 
+<div id = "mySketch">
   <script src="p5.js" type="text/javascript"></script>
   <script src="sketch.js" type="text/javascript"></script>
-
- <p class="imageDesc">
-   Hello this is the Description
-</p>
+</div>
 
 <div class = "" id = "controlsDiv">
   <button type="button" id="randButton">Click once to randomize</button>
 </div>
 
-
+<p class="imageDesc">
+   Hello this is the Description
+</p>
 
 </html>
