--- a/index.html
+++ b/index.html
@@ -151,6 +151,17 @@
 			</div>
 		</div>
 
+		<div class="column" id="Randomizer">
+			<h2> <b><a id="webLink" href="Art101-Randomizer/index.html">
+				Game Randomizer </a></b></h2>
+
+			<div class="Description">
+				<p>
+					Game randomizer description
+				</p>
+			</div>
+		</div>
+
 	</div>
 </body>
 
