--- a/index.html
+++ b/index.html
@@ -162,6 +162,17 @@
 			</div>
 		</div>
 
+		<div class="column" id="P5 Avatar">
+			<h2> <b><a id="webLink" href="">
+				Avatar </a></b></h2>
+
+			<div class="Description">
+				<p>
+					P5 Avatar description
+				</p>
+			</div>
+		</div>
+
 	</div>
 </body>
 
