--- a/index.html
+++ b/index.html
@@ -151,28 +151,30 @@
 			</div>
 		</div>
 
-		<div class="column" id="Randomizer">
+		<!-- Randomizer	 -->
+		<div class="column" id="Rando">
 			<h2> <b><a id="webLink" href="Art101-Randomizer/index.html">
-				Game Randomizer </a></b></h2>
+				[EPILEPSY WARNING] Sun Drug (Click Me) </a></b></h2>
 
 			<div class="Description">
 				<p>
-					Game randomizer description
+					This is the randomizer description
 				</p>
 			</div>
-		</div>
+		</div>		
 
-		<div class="column" id="P5 Avatar">
-			<h2> <b><a id="webLink" href="">
-				Avatar </a></b></h2>
-
+		<!-- P5 Avatar -->
+		<div class="column" id="Avatar">
+			<h2> <b><a id="webLink" href="Art101-P5Avatar/index.html">
+				Avatar project </a></b></h2>
 			<div class="Description">
 				<p>
-					P5 Avatar description
+					This is the avatar description
 				</p>
 			</div>
 		</div>
-
+		
+		
 	</div>
 </body>
 
