--- a/Art 75 Stuff/OurSociety/Skill.html
+++ b/Art 75 Stuff/OurSociety/Skill.html
@@ -37,6 +37,8 @@
 
 <div>
 	<a href="Doubt.html"> <span class="Doubt"> But what if I can't do it? </span> </a>
+	<br>
+	<a href="Our Society.html"> <span class="home"> Click here to go back to the beginning </span> </a>
 </div>
 
 </body>
