--- a/Art 75 Stuff/OurSociety/Idk.html
+++ b/Art 75 Stuff/OurSociety/Idk.html
@@ -33,6 +33,8 @@
 
 <div>
 	<a href="Doubt.html"> <span class="YouCanDoIt"> You have to try to achieve your dreams. </span> </a>
+	<br>
+	<a href="Our Society.html"> <span class="home"> Click here to go back to the beginning </span> </a>
 </div>
 
 </body>
