--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
 
 		<!-- Knight's Life -->
 		<div class="column" id="Knight'sLife">
-			<h2> <b><a id="webLink" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html"> A Knights Duty
-						(Click Me) </a></b></h2>
+			<h2> <b><a id="webLink" href="Art%2075%20Stuff/Knight'sLife/Interactive%20Website.html"> A Knights Duty </a></b></h2>
 
 			<div class="Description">
 				<p>
@@ -108,8 +107,8 @@
 
 		<!-- Your Decisions	 -->
 		<div class="column" id="YourDecisions">
-			<h2> <b><a id="webLink" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html"> Your Decisions (Click
-						Me)</a></b></h2>
+			<h2> <b><a id="webLink" href="Art%2075%20Stuff/YourDecisions/Your%20Decisions.html">
+				Your Decisions </a></b></h2>
 
 			<div class="Description">
 				<p>
@@ -122,9 +121,8 @@
 
 		<!-- What we want to do	 -->
 		<div class="column" id="WhatDo">
-			<h2> <b><a id="webLink" href="Art%2075%20Stuff/OurSociety/Our%20Society.html">
-						What we want to do (Click Me)</a></b></h2>
-
+			<h2> <b><a id="webLink" href="Art%2075%20Stuff/OurSociety/Our%20Society.html"> 
+				What we want to do </a></b></h2>
 
 			<div class="Description">
 				<p>
@@ -136,7 +134,7 @@
 			</div>
 		</div>
 
-		<!-- Sun Drug	 -->
+		<!-- Sun Drug -->
 		<div class="column" id="SunDrug">
 			<h2> <b><a id="webLink" href="SunThing.html">
 				[EPILEPSY WARNING] Sun Drug (Click Me) </a></b></h2>
@@ -154,7 +152,7 @@
 		<!-- Randomizer	 -->
 		<div class="column" id="Rando">
 			<h2> <b><a id="webLink" href="Art101-Randomizer/index.html">
-				[EPILEPSY WARNING] Sun Drug (Click Me) </a></b></h2>
+				Randzomier </a></b></h2>
 
 			<div class="Description">
 				<p>
@@ -167,6 +165,7 @@
 		<div class="column" id="Avatar">
 			<h2> <b><a id="webLink" href="Art101-P5Avatar/index.html">
 				Avatar project </a></b></h2>
+
 			<div class="Description">
 				<p>
 					This is the avatar description
